# SonicGlow

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RGBColorPalette.cpp  RGBColorPalette.h  defaultVisual.cpp  defaultVisual.h  fft.cpp  fft.h  fftVisual.cpp  fftVisual.h  main.cpp  parameters.h  portaudiosetup.cpp  portaudiosetup.h  preProcessing.cpp  preProcessing.h  vuVisual.cpp  vuVisual.h  waveformVisual.cpp  waveformVisual.h
rpi_ws281x/: LICENSE  my_program
